# Santorini

./: .gitignore  CMakeLists.txt  README.md  setup.sh
README/: LOUIS.md  TITOUAN.md
include/: board.hpp  bob.hpp  builder.hpp  case.hpp  common.hpp  controller.hpp  gamestate.hpp  mesh.hpp  model.hpp  network_manager.hpp  view.hpp
include/shaders/: fragment.frag  vertex.vert
lib/glad/: glad.c  glad.h
src/: board.cpp  bob.cpp  builder.cpp  case.cpp  controller.cpp  gamestate.cpp  main.cpp  mesh.cpp  model.cpp  network_manager.cpp  shader.cpp  view.cpp
tests/: board_test.cpp  builder_test.cpp  case_test.cpp  model_test.cpp
